Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2275

fix interim cache lossing data if the server process crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 4.0.2
    • 4.1.2
    • Cache
    • None

    Description

      the current interim cache device is not permanent storage, it is cleared on each server restart, that is because we do not have a very good solution for the storage consistence.

      we have a patch under testing for that improvement.

      Attachments

        1. master.patch
          17 kB
          portl4t

        Activity

          People

            portl4t portl4t
            zym Zhao Yongming
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: