TS-2275: fix interim cache lossing data if the server process crash

we have disable the permanent storage on the interim cache device
due to consistence. that is why I point out this is #1 problem of
the current implement in
  https://blog.zymlinux.net/index.php/archives/555
as: loss data if the server process crash

after this patch, we can declare the interim cache stable